# achatbot

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  assets  pyproject.toml  requirements.txt
a2a_server/: README.md
a2a_server/cmd/: pyproject.toml
a2a_server/cmd/client/: __main__.py  agent.py
a2a_server/cmd/client/tpl/: agent_answer.jinja  agents.jinja  called_agent_history.jinja  decide.jinja
a2a_server/cmd/mcp_github/: __init__.py  __main__.py  agent.py  agent_executor.py  mcp.py
a2a_server/cmd/mcp_github/tpl/: called_tools_history.jinja  decide.jinja  tool.jinja
demo/: ans_rnnoise_enhancer.py  asr_latency.py  asr_sense_voice.py  asr_vosk.py  asr_whisper.py  asr_whisper_cpp.py  asr_whisper_faster.py  asr_whisper_groq.py  asr_whisper_mlx.py  asr_whisper_openai.py  asr_whisper_transformers.py  asr_whispercpp.py  audio_length.py  content_parser_tts.py  cv.py  cv_detector_yolo.py  cv_video2Images.py  device_cuda.py  embedding_sentence_transformers.py  fasterWhisper.py  gen_podcast.py  gen_podcasts_xml.py  image_compression.py  image_together_flux.py  insert_podcast.py  langchain_gemini_content_generator.py  list_microphones.py  llamacpp.py  llm_chatglmcpp.py  llm_google_gemini.py  llm_llamacpp.py  llm_llamacpp_functionary.py  llm_transformers.py  multi_send.py  nest_async.py  ogg_encode_decode.py  openai_whisper.py  pipe.py  pipe_asr.py  queue.py  (+25 more)
demo/adk-streaming-ws/app/: main.py
demo/adk_streaming_ws/: pyproject.toml
demo/adk_streaming_ws/server/: main.py
demo/adk_streaming_ws/server/google_search_agent/: agent.py
demo/adk_streaming_ws/server/mock_tool_agent/: agent.py
demo/agora/: echo.py  rtc.py
demo/aws/: upload.py
demo/clearvoice/: FRCRN_SE_16K.py  MossFormer2_SE_48K.py  MossFormerGAN_SE_16K.py
demo/cloudflare/: rest_api.py
demo/content_parser/: README.md  audio_instructor.py  content_extractor.py  content_extractor_instructor.py  image_instructor.py  pdf_extractor_instructor.py  types.py  video_instructor.py  website_extractor_instructor.py  youtube_transcribe_instructor_partial.py  youtube_transcribe_instructor_stream.py  youtube_transcriber.py  youtube_transcriber_instructor.py
demo/content_parser/table/: __init__.py  chapter.py  podcast.py
demo/daily/: chat_bot_be.py  chat_bot_daily_echo.py  chat_bot_pyaudio_echo.py  daily_helpers.py  server.py
demo/funasr/: ct_tranfromer_punc.py  fsmn_vad.py  paraformer_asr.py  timestamp.py
demo/grpc/echo/: client.py
demo/langchain/: prompt.py
demo/livekit/: create_room.py  e2ee_join_room.py  face_landmark.py  gen_jwt_token.py  pub_video_track.py  pub_wave_track.py  room_rtc_events.py
demo/modelscope/: ans_dfsmn_enhancer.py  ans_frcrn_enhancer.py  ans_zip_enhancer.py  ct_tranfromer_punc.py  fsmn_vad.py  paraformer_asr.py  readme.md  timestamp.py
demo/train/: dp.py
demo/websocket/: echo.py
deploy/: README.md
deploy/aws/: .gitignore
deploy/cerebrium/: .gitignore
deploy/docker/: .env.example  Dockerfile.cpu.debian  Makefile  README.md  download.Dockerfile  gen.sh
deploy/k8s/: gen.sh  helm.md
deploy/leptonai/: README.md
deploy/modal/: .gitignore  README.md
docs/: colab.md  dev.md  features.md  local_bots.md  multimodal_interaction.md  project_structure.md  realtime-voice-rag-agent.md  reltime-voice.md  remote_grpc_tts_speaker_bot.md  remote_http_fastapi_daily_chat_bots.md  remote_queue_chat_bot_worker.md  remote_rpc_chat_bot_worker.md  service_deploy.md  settings.json  websocket_webrtc.md
mcp_server/: README.md  __init__.py  server.py
mcp_server/auth/: __init__.py  token_storage.py
mcp_server/cmd/search/fastmcp/: README.md  __init__.py  pyproject.toml  search.py  server.py
mcp_server/cmd/search/lowlevel/: README.md  pyproject.toml  server.py
mcp_server/cmd/simple/fastmcp/: README.md  echo.py  pyproject.toml  server.py
mcp_server/cmd/weather/fastmcp/: README.md  pyproject.toml  server.py  weather.py
mcp_server/common/: event_store.py
mcp_server/prompts/: __init__.py  prompt_register.py  simple.py
mcp_server/resources/: __init__.py  resource_register.py  simple.py
mcp_server/tools/: __init__.py  fetch_website.py  state_send_notification.py  stateless_send_notification.py  tool_register.py
scripts/: pipy_achatbot.sh  py_format.sh  pypi_achatbot.sh  upload_hf.py  upload_hf.sh
src/cmd/: be.py  fe.py  init.py
src/common/: audio_stream.py  chat_history.py  config.py  const.py  device_cuda.py  event.py  factory.py  http.py  interface.py  logger.py  pool.py  pool_class.py  pool_engine.py  random.py  register.py  ringbuffer.py  session.py  singleton.py  time_utils.py  types.py
src/processors/: agora_input_transport_processor.py  agora_output_transport_processor.py  ai_processor.py  app_message_processor.py  audio_camera_input_processor.py  audio_camera_output_processor.py  audio_input_processor.py  daily_input_transport_processor.py  daily_output_transport_processor.py  ffmpeg_pipe_processor.py  frame_log_processor.py  image_capture_processor.py  image_url_extract_processor.py  interval_processor.py  livekit_input_transport_processor.py  livekit_output_transport_processor.py  ossrs_input_transport_processor.py  punctuation_processor.py  rtvi_asr_llm_tts_processor.py  rtvi_processor.py  session_processor.py  small_webrtc_input_transport_processor.py  small_webrtc_output_transport_processor.py  text_normalize_processor.py  transcript_processor.py  user_idle_processor.py  user_image_request_processor.py
src/schemas/: function_schema.py  tools_schema.py
src/serializers/: avatar_protobuf.py  transcription_protobuf.py
src/services/: agora_client.py  base.py  daily.py  daily_client.py  livekit_client.py  mcp_client.py  small_webrtc_client.py  turn_server.py  webrtc_peer_connection.py
src/transports/: agora.py  base.py  daily.py  fastapi_websocket_server.py  livekit.py  small_webrtc.py  websocket_server.py
src/types/: ai_conf.py  rtvi.py  vision.py
test/cmd/: test_init.py
test/common/: test_bytes2np.py  test_factory.py  test_logger.py  test_task.py
test/integration/: test_tts_play.py
ui/websocket/: README.md
(+957 files in other folders)
